--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       </div>
     </div>
 
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/main.js"></script>
   </body>
 </html>
